--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -6,13 +6,14 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #064574;
+  --ifm-color-primary-dark: #053e68;
+  --ifm-color-primary-darker: #053b63;
+  --ifm-color-primary-darkest: #043051;
+  --ifm-color-primary-light: #074c80;
+  --ifm-color-primary-lighter: #074f85;
+  --ifm-color-primary-lightest: #085a97;
+  --ifm-background-color: #fff;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
@@ -30,6 +31,41 @@
 
   .github-box .github-logo {
     background: url(../../static/img/github_dark.png) no-repeat;
+  }
+}
+
+// 定制navbar item 样式
+.navbar__items {
+  gap: 10px;
+  a.navbar__item {
+    position: relative;
+  }
+
+  a.navbar__link:hover::before {
+    visibility: visible;
+    width: 36px;
+  }
+
+  a.github-box:hover::before {
+    visibility: hidden;
+  }
+
+  a.navbar__item.navbar__link--active::before {
+    visibility: visible;
+    width: 36px;
+  }
+
+  a.navbar__item::before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    bottom: -5px;
+    left: 12;
+    background-color: #34b7a7;
+    visibility: hidden;
+    width: 0px;
+    transition: all 0.3s ease-in-out 0s;
   }
 }
 
