--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -6,14 +6,14 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #064574;
-  --ifm-color-primary-dark: #053e68;
-  --ifm-color-primary-darker: #053b63;
-  --ifm-color-primary-darkest: #043051;
-  --ifm-color-primary-light: #074c80;
-  --ifm-color-primary-lighter: #074f85;
-  --ifm-color-primary-lightest: #085a97;
-  --ifm-background-color: #fff;
+  --ifm-color-primary: #1d465e;
+  --ifm-color-primary-dark: #1a3f55;
+  --ifm-color-primary-darker: #193b50;
+  --ifm-color-primary-darkest: #143142;
+  --ifm-color-primary-light: #204d67;
+  --ifm-color-primary-lighter: #21506c;
+  --ifm-color-primary-lightest: #265b7a;
+  --ifm-background-color: #ffffff;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
