--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -3,6 +3,11 @@
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
+
+//  @import "tailwindcss/base";
+//  @import "tailwindcss/components";
+//  @import "tailwindcss/utilities";
+
 @font-face {
   font-family: 'custom zh';
   src: url('../../static/font/DouyinSansBold.otf');
@@ -26,7 +31,7 @@
   --ifm-color-primary-lightest: #265b7a;
   --ifm-background-color: #ffffff;
   --ifm-code-font-size: 95%;
-  --ifm-font-family-base: 'custom en', 'custom zh', sans-serif;
+  --ifm-font-family-base: 'custom en', 'custom zh', sans-serif #{!important};
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
