--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -30,6 +30,7 @@
   --ifm-color-primary-lighter: #21506c;
   --ifm-color-primary-lightest: #265b7a;
   --ifm-background-color: #ffffff;
+  --line-color: #ebe5e5 !important;
   --ifm-code-font-size: 95%;
   --ifm-font-family-base: 'custom en', 'custom zh', sans-serif;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
