feat: some ideas

--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -21,3 +21,21 @@
   align-items: center;
   justify-content: center;
 }
+
+
+@keyframes float {
+  0% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+
+.sqD{
+  animation: float 2s infinite ease-in-out;
+}
